display visits in Site __repr__, display new alias flash msg in green

--- a/app/templates/add_alias.html
+++ b/app/templates/add_alias.html
@@ -11,7 +11,7 @@
       <div>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-        <ul>
+        <ul style="color: green">
             {% for message in messages %}
             <li>{{ message }}</li>
             {% endfor %}
